# amerikan-borsalari

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
config/: scoring.yaml  settings.yaml
docs/: architecture.md  cron_job_org_setup.md  research_notes.md
src/usbot/: __init__.py  cli.py  orchestrator.py
src/usbot/backtest/: __init__.py  composite_bt.py  engine.py  metrics.py  walkforward.py
src/usbot/config/: __init__.py  secrets.py  settings.py
src/usbot/congress/: __init__.py  ingest.py  model.py  score.py
src/usbot/dashboard/: __init__.py  builder.py  charts.py  perf.py  sectors.py
src/usbot/data/: __init__.py  cache.py  fundamentals_finnhub.py  macro.py  prices.py  quality.py  stooq.py
src/usbot/db/: repository.py  schema.py
src/usbot/earnings/: __init__.py  ingest.py  model.py  score.py
src/usbot/indicators/: __init__.py  technical.py
src/usbot/insider/: __init__.py  ingest.py  model.py  score.py
src/usbot/institutional/: __init__.py  ingest.py  model.py  score.py
src/usbot/learning/: __init__.py  factor_ic.py  (+1 more)
state/: active_portfolio.json  portfolios.json  usbot.db
tests/: test_active_store.py  test_backtest.py  test_dashboard.py  test_data_quality.py  test_dates.py  test_email_dashboard_link.py  test_followup_fixes.py  test_layer1_signals.py  test_layer2_portfolio.py  test_layer3_signals.py  test_layer4_backtest.py  test_learning.py  test_ledger.py  test_model_persistence.py  test_news.py  test_position_sizing.py  test_review_fixes.py  test_scoring.py  test_sector_neutral.py  test_signals.py  test_smoke.py  test_t1_fill.py  test_transaction_costs.py  test_universe.py
(+41 files in other folders)
